Oplog query on initial syncing node can cause segmentation fault

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.3, 4.1.3
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Repl 2018-07-16, Repl 2018-08-27
    • 60
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If an oplog query with a read concern afterClusterTime is run on a node while it is in initial sync but doesn't have an oplog, then it will seg-fault. This is similar to SERVER-34249, though this time the node's config is initialized. I think this is probably possible on 3.6 as well, though the implementer should check.

        1. bf-9529.diff
          4 kB
          Judah Schvimer

            Assignee:
            Tess Avitabile (Inactive)
            Reporter:
            Judah Schvimer
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: