SERVER-35616 Do not allow afterClusterTime reads before oplog exists